--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,9 @@
 development:
-  adapter: sqlite3
-  database: db/blog.sqlite3
+  adapter: mysql2
+  database: blog
   pool: 5
   timeout: 5000
+  username: root
+  password: "123456"
+  host: 127.0.0.1
+  encodeing: utf8
